# Yibengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_shaders.bat  compile_shaders.sh
src/client/: client.cpp  client.h  main.cpp  object.cpp  object.h
src/client/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  descriptors.cpp  descriptors.h  device.cpp  device.h  model.cpp  model.h  pipeline.cpp  pipeline.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  window.cpp  window.h
src/client/shaders/: simple.frag  simple.vert
src/shared/: file.cpp  file.h
